# p2pvc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  p2plib.c  server_test.c
CMake/: FindPortaudio.cmake
src/: audio.c  audio.h  display.c  display.h  frame.h  main.cpp  network.cpp  network.h  p2plib.c  p2pvc.c  pa_front.c  pa_process.c  vc.c  video.c  video.h
src/inc/: audio.h  display.h  p2plib.h  pa_hostapi.h  video.h
